; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_xtr_fatmach0.c_oneshotall_buffer.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_xtr_fatmach0.c_oneshotall_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @oneshotall_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @oneshotall_buffer(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call %struct.TYPE_6__* @oneshot_buffer(i32* %10, i32* %11, i32 0)
  store %struct.TYPE_6__* %12, %struct.TYPE_6__** %6, align 8
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %14 = icmp ne %struct.TYPE_6__* %13, null
  br i1 %14, label %15, label %51

15:                                               ; preds = %2
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %7, align 4
  %19 = call i32* @r_list_newf(i32 (%struct.TYPE_6__*)* @r_bin_xtrdata_free)
  store i32* %19, i32** %8, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %25, label %22

22:                                               ; preds = %15
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %24 = call i32 @r_bin_xtrdata_free(%struct.TYPE_6__* %23)
  store i32* null, i32** %3, align 8
  br label %52

25:                                               ; preds = %15
  %26 = load i32*, i32** %8, align 8
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %28 = call i32 @r_list_append(i32* %26, %struct.TYPE_6__* %27)
  store i32 0, i32* %9, align 4
  store i32 1, i32* %9, align 4
  br label %29

29:                                               ; preds = %46, %25
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %31 = icmp ne %struct.TYPE_6__* %30, null
  br i1 %31, label %32, label %36

32:                                               ; preds = %29
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* %7, align 4
  %35 = icmp slt i32 %33, %34
  br label %36

36:                                               ; preds = %32, %29
  %37 = phi i1 [ false, %29 ], [ %35, %32 ]
  br i1 %37, label %38, label %49

38:                                               ; preds = %36
  %39 = load i32*, i32** %4, align 8
  %40 = load i32*, i32** %5, align 8
  %41 = load i32, i32* %9, align 4
  %42 = call %struct.TYPE_6__* @oneshot_buffer(i32* %39, i32* %40, i32 %41)
  store %struct.TYPE_6__* %42, %struct.TYPE_6__** %6, align 8
  %43 = load i32*, i32** %8, align 8
  %44 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %45 = call i32 @r_list_append(i32* %43, %struct.TYPE_6__* %44)
  br label %46

46:                                               ; preds = %38
  %47 = load i32, i32* %9, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %9, align 4
  br label %29

49:                                               ; preds = %36
  %50 = load i32*, i32** %8, align 8
  store i32* %50, i32** %3, align 8
  br label %52

51:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %52

52:                                               ; preds = %51, %49, %22
  %53 = load i32*, i32** %3, align 8
  ret i32* %53
}

declare dso_local %struct.TYPE_6__* @oneshot_buffer(i32*, i32*, i32) #1

declare dso_local i32* @r_list_newf(i32 (%struct.TYPE_6__*)*) #1

declare dso_local i32 @r_bin_xtrdata_free(%struct.TYPE_6__*) #1

declare dso_local i32 @r_list_append(i32*, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
